[gd_scene load_steps=15 format=2]

[ext_resource path="res://game_objects/Crosshair.gd" type="Script" id=1]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=2]
[ext_resource path="res://assets/progcir_00.png" type="Texture" id=3]
[ext_resource path="res://assets/shotgun_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/shotgun_cock.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/shotgun_load.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/enemy_die.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25, 25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 25 )

[node name="Crosshair" type="Node2D"]
script = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="OneAreaCol" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/OneAreaCol"]
scale = Vector2( 22, 22 )
texture = ExtResource( 2 )

[node name="TwoAreaCol1" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -118, -117 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/TwoAreaCol1"]
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="TwoAreaCol2" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 103, 118 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/TwoAreaCol2"]
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="ThreeAreaCol1" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 108, 124 )
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/ThreeAreaCol1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="ThreeAreaCol2" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/ThreeAreaCol2"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="ThreeAreaCol3" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -127, -128 )
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/ThreeAreaCol3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FourAreaCol1" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -113, -113 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FourAreaCol1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FourAreaCol2" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 97, -111 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FourAreaCol2"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FourAreaCol3" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -120, 107 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FourAreaCol3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FourAreaCol4" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 100, 113 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FourAreaCol4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FiveAreaCol1" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -116, 109 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FiveAreaCol1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FiveAreaCol2" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 97, 110 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FiveAreaCol2"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FiveAreaCol3" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -114, -111 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FiveAreaCol3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FiveAreaCol4" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 97, -115 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FiveAreaCol4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="FiveAreaCol5" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/FiveAreaCol5"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol1" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -108, -111 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol2" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -113, -1 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol2"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol3" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -112, 108 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol4" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 96, -114 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol5" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 96, 1 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol5"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="SixAreaCol6" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 95, 111 )
shape = SubResource( 6 )
disabled = true

[node name="Sprite" type="Sprite" parent="HitArea/SixAreaCol6"]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -31.0
margin_top = -153.0
margin_right = 33.0
margin_bottom = -89.0
mouse_filter = 2
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_progress = Color( 0.533333, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shotgun_shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="shotgun_cock_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="shotgun_load_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="enemy_die_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
